[gd_scene load_steps=3 format=3 uid="uid://d0qh1hd4gk3p7"]

[ext_resource type="Script" uid="uid://ccxi5j0b4qyea" path="res://Levels/UI/finished_demo.gd" id="1_qpkgk"]
[ext_resource type="FontFile" uid="uid://v5wm4xvtuo2a" path="res://assets/Simpsonfont.ttf" id="2_g47e3"]

[node name="FinishScreen" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_qpkgk")

[node name="FadeRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(2400, 1600)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1200.0
offset_top = -800.0
offset_right = 1200.0
offset_bottom = 800.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 120

[node name="Label" type="RichTextLabel" parent="VBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_shadow_color = Color(0.458405, 0.458405, 0.458405, 1)
theme_override_fonts/normal_font = ExtResource("2_g47e3")
theme_override_font_sizes/normal_font_size = 128
text = "Thank you for playing"
fit_content = true
horizontal_alignment = 1

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_top = 120

[node name="Label" type="RichTextLabel" parent="VBoxContainer/MarginContainer3"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_shadow_color = Color(0.458405, 0.458405, 0.458405, 1)
theme_override_fonts/normal_font = ExtResource("2_g47e3")
theme_override_font_sizes/normal_font_size = 256
text = "END OF CONTENT"
fit_content = true
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_top = 40

[node name="Label" type="RichTextLabel" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_shadow_color = Color(0.458405, 0.458405, 0.458405, 1)
theme_override_fonts/normal_font = ExtResource("2_g47e3")
theme_override_font_sizes/normal_font_size = 128
text = "We hope you enjoyed our demo"
fit_content = true
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="quit" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 2
text = "PROUD QUIT"

[node name="menu" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 10
text = "MAIN MENU
"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/quit" to="." method="_on_quit"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/menu" to="." method="_on_menu"]
